--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
 <html>
-<title>Assingment 3 webpage</title> 
+<head>
+      <title>Assingment 3 webpage</title> 
+</head>
+<body>
+    <header
+</body>
 
