--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -4,6 +4,8 @@
       <title>Assingment 3 webpage</title> 
 </head>
 <body>
-    <header
+    <header><h1>Image gallery</h1></header>
+    <main>
+        <img src="https://tisztaotthon.cafeblog.hu/files/2018/01/nanotech.jpg">
 </body>
 
