--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -2,6 +2,16 @@
 <html>
 <head>
       <title>Assingment 3 webpage</title> 
+      <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            allign-items: center;
+            padding: 20px;
+        }
+
+        
+      </style>
 </head>
 <body>
     <header><h1>Image gallery</h1></header>
