--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -10,7 +10,14 @@
             padding: 20px;
         }
 
-        
+        button {
+            margin-bottom: 10px
+        }
+
+        img {
+            max-width: 400px;
+            height: auto;
+        }
       </style>
 </head>
 <body>
@@ -27,9 +34,9 @@
     </main>
 
     <script>
-        function imageChanger(imageSrc, imageDescription) {
+        function imageChanger(imageSrc, imageDescription, externalLink) {
             document.querySelector('img').src = imageSrc;
-            document.getElementById('imageDescription').textContent = imageDescription;
+            document.getElementById('imageDescription').innerHTML = imageDescription + '- <a href="'+ exrernalLink + '" target="_blank">Related Link</a>';
         }
     </script>
 </body>
