--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -6,7 +6,7 @@
         body {
             display: flex;
             flex-direction: column;
-            allign-items: center;
+            align-items: center;
             padding: 20px;
         }
 
@@ -36,7 +36,7 @@
     <script>
         function imageChanger(imageSrc, imageDescription, externalLink) {
             document.querySelector('img').src = imageSrc;
-            document.getElementById('imageDescription').innerHTML = imageDescription + '- <a href="'+ exrernalLink + '" target="_blank">Related Link</a>';
+            document.getElementById('imageDescription').innerHTML = imageDescription + ' - <a href="' + externalLink + '" target="_blank">Related Link</a>';
         }
     </script>
 </body>
