--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -36,7 +36,7 @@
     <script>
         function imageChanger(imageSrc, imageDescription, externalLink) {
             document.querySelector('img').src = imageSrc;
-            document.getElementById('imageDescription').innerHTML = imageDescription + ' - <a href="' + externalLink + '" target="_blank">Related Link</a>';
+            document.getElementById('imageDescription').innerHTML = imageDescription + ' - <a href="' + externalLink + '" target="_blank">you will find the details within this link</a>';
         }
     </script>
 </body>
