--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -5,12 +5,12 @@
       <style>
         body {
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             align-items: center;
             padding: 20px;
         }
 
-        button {
+        button, img, p {
             margin-bottom: 10px
         }
 
