--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -5,11 +5,22 @@
     <title>Assingment 3 webpage</title> 
     <link rel="stylesheet" href="base.css">
     <style>
+        :root {
+            --primary-color-light:rgb(255, 255, 255);
+            --primary-color-dark: rgb(0, 0, 0);
+            --primary-color: var(--primary-colorol-light);
+        }
+
+        [data-theme="dark"] {
+            --primary-color: var(--primary-color-dark);
+        }
+
         body {
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 20px;
+            color: var(--primary-color);
         }
 
         button, img, p {
@@ -55,7 +66,7 @@
 
         }
 
-        
+
         function imageChanger(imageSrc, imageDescription, externalLink) {
             document.querySelector('img').src = imageSrc;
             document.getElementById('imageDescription').innerHTML = imageDescription + ' - <a href="' + externalLink + '" target="_blank">you will find the details within this link</a>';
