--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -8,7 +8,7 @@
         :root {
             --primary-color-light:rgb(255, 255, 255);
             --primary-color-dark: rgb(0, 0, 0);
-            --primary-color: var(--primary-colorol-light);
+            --primary-color: var(--primary-color-light);
         }
 
         [data-theme="dark"] {
