--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -88,12 +88,13 @@
         function updateUserHeading() {
             const username = getQueryStringValue('user_name');
             if (username) {
-                const heading = document.QuerySelector('h1');
+                const heading = document.querySelector('h1');
                 heading.textContent = 'Hello, $(username)';
             }
         }
 
-        window.onload = updateUserHeading
+        window.addEventListener('load', updateUserHeading);
+
     </script>
 </body>
 </html>
