--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    /*The following code will define the document properties*/
+    <!-- This code will define the properties of the document-->
     <meta charset="utf-8">
+    <!-- The charset meta tag sets the character encoding for the following document into UTF 8. which will support a vast range of characters, numerics, and symbols-->
     <title>Assingment 3 webpage</title> 
     <link rel="stylesheet" href="base.css">
+    <!-- The link tag links this document to an external stylesheet named 'base,css' which contains the foundational styling for a webpage-->
     <style>
+        /*CSS style definition begins here*/
+        /*styling variables*/
         :root {
             --primary-color: rgb(255,255,255);
             --secondary-color: rgb(200,200,200);
@@ -15,9 +19,9 @@
         }
 
         [data-theme="dark"] {
-            --primary-color: rgb(0, 0, 0);
-            --secondary-color: rgb(50,50,50);
-            --bg-color: rgb(20,20,20);
+            --primary-color: rgb(0, 0, 0);/* 255,0,0 represents red */
+            --secondary-color: rgb(50,50,50);/* 0,255,0 */
+            --bg-color: rgb(20,20,20);/* 0,0,255 */
             --font-color: rgb(180,180,180);
             --heading-color: rgb(150,150,150)
            ;
