--- a/Assignment_3_WebPage/assignment 3 webpage.html
+++ b/Assignment_3_WebPage/assignment 3 webpage.html
@@ -61,11 +61,28 @@
         <form><!--creating a function where the user inputs his name and the website interacts with that indiviual-->
             <input type="text" name="user_name" placeholder="Enter your name!">
             <button type="submit>"Apply!</button>
+            
         </form>
     </nav>
     <main>
-        
+        <article>
+            <h2>Nanotechnology</h2>
+            <p>Nanotechnology means dealing with technologies or electronic devices which are very small. To be specific the size of these technologies are about 1-10 nanometres.</p>
+            <h3>Benefits of nanotechnology</h3>
+            <p>With the help of nanotechnology computer hardwares will be upgraded which will eventually hasten the hardware efficiency and larger data storage devices as well. with the help of nanotechnology software engineers will be able to debug a code very swiftly as nanotechnology is very precise</p>
+            <p>With the help of nanotechnology motherboards, silicone cips can be upgraded and thus it will upgrade their efficiency which will be very helpful for the software engineers in executing a code or program.</p>
+            <h3>How nanotechnology will improve the state of other enginnering seectors</h3>
+            <p>Nanotechnology is a blessing for the mechanical engineers and the civil engineers because with the help of nanoteechnology engineers can control elements at the molecular level which will result in a faultless creation or construction.</p>
 
+        </article>
+        <aside>
+             <h2>Drawbacks of nanotechnology</h2>
+             <p>While we deal with extremely small elements, these very small elements can get inside our body which can cause cancer. This can also eventually pollute the enovironment. Moreover with the help of nanotechnology hackers can easily bypass any security on the web.</p>
+             <ul>
+                <li><a href="https://www.treehugger.com/how-does-nanotechnology-impact-the-environment-5186947">https://www.treehugger.com/how-does-nanotechnology-impact-the-environment-5186947</a></li>
+
+             </ul>
+        </aside>
         <img src="https://tisztaotthon.cafeblog.hu/files/2018/01/nanotech.jpg">
         <p id="imageDescription">default image description</p>
         <!--creating buttons which will change the image once clicked by the user-->
